# HAKES

./: .clang-format  .gitignore  .gitmodules  BUILD_STATUS.md  CITATION.cff  LICENSE  Makefile  NOTICE  README.md  REFACTORING_COMPLETE.txt  REFACTORING_INDEX.md  REFACTORING_NOTES.md  REFACTORING_SUMMARY.sh
.devcontainer/: Dockerfile  devcontainer.json
apps/: README.md
conf/: config.json  ollama_example.json
docs/: README.md  docusaurus.config.ts  package.json  pnpm-lock.yaml
embed-endpoint/: README.md  endpoint.cpp  ollama_endpoint.h  openai_endpoint.h
embed-worker/: Makefile  README.md  build.mk  no_sgx.mk  sgx_t.mk  sgx_u.mk
fnpacker/: README.md  go.mod  go.sum  main.go
hakes-server/: Makefile  README.md  build.mk  main.py  requirements.txt  seed-mongodb
hakes-worker/: Makefile  build.mk  no_sgx.mk  sgx_t.mk  sgx_u.mk
key-service/: Makefile  README.md  sgx_t.mk  sgx_u.mk
key-service-client/: Makefile  client.cpp
message/: client_req.cpp  client_req.h  embed.cpp  embed.h  keyservice_user.cpp  keyservice_user.h  keyservice_worker.cpp  keyservice_worker.h  kvservice.cpp  message.cpp  message_ext.cpp  message_ext.h  searchservice.cpp  searchservice.h
python/: CMakeLists.txt  README.md  build_index.py  pyproject.toml  setup.py
python/bindings/: bindings.cpp
python/hakes/: __init__.py
python/hakes/index/: __init__.py  build.py  dataset.py  debug.py  index.py  ivf.py  nn.py  opq.py  pq.py  vt.py
search-worker/: Makefile  README.md  build.mk  no_sgx.mk  sgx_t.mk  sgx_u.mk
secret/: ra_tls_options.c
server/: server.cpp  server.h  service.cpp
store-client/: seal_format.h
tools/: gen_bert_input.py  gen_client_request.py
utils/: http.cpp  io.cpp  io.h  json.h  (+5 more)
(+664 files in other folders)
